# TrustShield

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: policy.yaml  training.yaml
data/sample/: README.md
docker/: Dockerfile
reports/: dashboard.html  policy_simulation.json
src/trustshield/evaluation/: __init__.py  cost_report.py  error_analysis.py  metrics.py  policy_simulation.py
src/trustshield/features/: __init__.py  graph.py  risk_rules.py
src/trustshield/ingestion/: __init__.py  synthetic.py
src/trustshield/models/: __init__.py  infer.py  train.py
src/trustshield/monitoring/: __init__.py  dashboard.py  report.py
src/trustshield/preprocessing/: __init__.py  text.py  validation.py
src/trustshield/serving/: app.py  policy.py  schemas.py
src/trustshield/tools/: validate_data.py
tests/: test_api.py  test_graph_features.py  test_policy.py  test_validation.py
